--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 
     <!-- build:css main/styles/main.css -->
     <!-- inject:css -->
+    <link rel="stylesheet" href="main/styles/main.css">
     <!-- endinject -->
     <!-- endbuild -->
   </head>
