--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 
         <footer>
           <md-toolbar layout="row" layout-align="center center">
-            <p>With ♥ from <a href="https://twitter.com/chad.furman">@Swiip</a></p>
+            <p>With ♥</p>
           </md-toolbar>
         </footer>
       </md-content>
