--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html ng-app="colorSee"><head><meta charset="utf-8"><title>colorSee</title><meta name="description" content=""><meta name="viewport" content="width=device-width"><link rel="stylesheet" href="styles/vendor-189db7d8.css"><link rel="stylesheet" href="styles/app-0811ac84.css"></head><body><!--[if lt IE 10]>
  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
- <![endif]--><div layout="vertical" layout-fill="" ng-controller="MainCtrl"><md-content><header ng-include="'app/components/navbar/navbar.html'"></header><section class="jumbotron"><h1>Pick a color, any color</h1><p class="lead">A hybrid app for naming colors in a picture</p></section><footer><md-toolbar layout="row" layout-align="center center"><p>With ♥ from <a href="https://twitter.com/chad.furman">@Swiip</a></p></md-toolbar></footer></md-content></div><script>
+ <![endif]--><div layout="vertical" layout-fill="" ng-controller="MainCtrl"><md-content><header ng-include="'app/components/navbar/navbar.html'"></header><section class="jumbotron"><h1>Pick a color, any color</h1><p class="lead">A hybrid app for naming colors in a picture</p></section><footer><md-toolbar layout="row" layout-align="center center"><p>With ♥</p></md-toolbar></footer></md-content></div><script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
